<resources>
    <string name="app_name">MostBeautifulProperty</string>
    <string name="radio_btn_magazine">画报</string>
    <string name="radio_btn_designer">设计师</string>
    <string name="radio_btn_discover">有物</string>
    <string name="radio_btn_mine">我</string>
    <string name="myDaily">我的画报</string>
    <string name="mineAtten">关注的设计师</string>
    <string name="mineWish">我的心愿单</string>
    <string name="mineMessage">消息中心</string>
    <string name="minwFeesback">建议问题和反馈</string>
    <string name="mineZui">最美团队的另一个产品:最美应用</string>
    <string name="mineShareBtn">推荐朋友使用最美有物</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="dialog_loading">拼命加载中...</string>
    <string name="titleMore">全部</string>
    <string name="settingTitle">设置</string>
    <string name="settingPersonalData">个人资料</string>
    <string name="settingAlerts">消息通知</string>
    <string name="settingClearCache">清除缓存</string>
    <string name="settingUserFeedback">用户反馈</string>
    <string name="settingGivePraise">给最美有物好评</string>
    <string name="settingRecommendFriend">推荐给朋友</string>
    <string name="settingAboutUs">关于我们</string>
    <string name="settingStartVideo">播放启动视频</string>
    <string name="settingExitLogin">退出登录</string>
    <string name="sanbtn_two">扫二维码</string>
    <string name="scan_item">条码</string>
    <string name="scan_open_lamp">开灯</string>
    <string name="scan_stop_lamp">关灯</string>
    <string name="weixin">微信</string>
    <string name="userFeedbackWay">反馈前请添加联系方式(手机, QQ等)</string>
    <string name="userFeedbackWayAdd">添加</string>
    <string name="userFeedbackWayCache">保存</string>
    <string name="userFeedbackPhone">请输入联系方式</string>
    <string name="userFeedbackBody">请输入反馈内容</string>
    <string name="userFeedbackSend">发送</string>
    <string name="magaDetailsAuthorName">作者</string>
    <string name="magaDetailsDesignerMode">设计师〥作者</string>
    <string name="magaDetailsDesignerComments">说点什么吧</string>
    <string name="focusOn">+关注</string>
    <string name="aboutUs">「最美有物」全球原创设计师产品发现和评价平台——不从众的好设计\n\n纽约、巴黎、米兰、伦敦、东京、蒙特利尔...最美团队拜访每一位设计师，了解他们的创作理念和背后的故事，挑选他们最好的作品，皮包、钱包、首饰，从手机壳到各种各样让生活变的更美的产品。\n
                \n用心、原创、高颜值又实用，每一件好产品背后都有故事，都有独特的设计理念。我们在乎的不仅仅是产品，更是每一位优秀的设计师、美好事物的创造者。现在开始，设计师们终于有了展示自己作品的舞台。这些真正有内涵的产品，值得送给自己，值得送给对的人。\n
                \n你和我对设计师们成果的态度，决定了哪一件产品才是真正的时尚与流行。最美团队并不试图推销东西，我们希望大家一起找到那些真正好的产品。点击喜欢或者不喜欢，表达出自己的态度，也看看其他人的态度，我们就可以一起定义时尚。\n
                \n小众还是大众？\n你不在乎，我也不在乎\n我们只是不想从众\n\n满大街都是的品牌\n也不赖\n我们只是不喜欢\n\n在乎颜值\n不讲究不凑合\n不一样的好品位\n\n我们一起\n在「最美有物</string>
    <string name="titleTx">评论</string>
</resources>
