<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lanou3g.mostbeautifulproperty.homepage.MainActivity">

    <FrameLayout
        android:id="@+id/replace_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_btn_main_magazine"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/radio_btn_magazine"
            android:text="@string/radio_btn_magazine"
            style="@style/RadioBtn"/>
        <RadioButton
            android:id="@+id/radio_btn_main_discover"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/radio_btn_discover"
            android:text="@string/radio_btn_discover"
            style="@style/RadioBtn"/>
        <RadioButton
            android:id="@+id/radio_btn_main_designer"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/radio_btn_designer"
            android:text="@string/radio_btn_designer"
            style="@style/RadioBtn"/>
        <RadioButton
            android:id="@+id/radio_btn_main_mine"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/radio_btn_mine"
            android:text="@string/radio_btn_mine"
            style="@style/RadioBtn"/>
    </RadioGroup>
</LinearLayout>
