<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lanou3g.mostbeautifulproperty.mine.uiview.setting.userfeedback.UserFeedbcakActivity">
    <include layout="@layout/custom_title_setting"
             android:id="@+id/include_title_setting"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <LinearLayout
            android:id="@+id/ll_user_feedback_before_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/userFeedbackPhoneLl">
            <TextView
                android:id="@+id/tv_user_feedback_before_phone"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/userFeedbackWay"
                style="@style/userFeedbackPhoneTv"/>
            <TextView
                android:id="@+id/tv_user_feedback_add"
                style="@style/userFeedbackPhoneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userFeedbackWayAdd"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_user_feedback_add_phone"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/userFeedbackPhoneLl">
            <EditText
                android:id="@+id/et_user_feedback_add_phone"
                android:background="#ffffff"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/userFeedbackPhone"
                style="@style/userFeedbackPhoneTv"/>
            <TextView
                android:id="@+id/tv_user_feedback_save_phone"
                style="@style/userFeedbackPhoneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userFeedbackWayCache"/>
        </LinearLayout>
    </RelativeLayout>
    <ListView
        android:id="@+id/lv_user_feedback"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/userFeedbackPhoneLl"
        android:background="@drawable/setting_user_feedback_body_bg">
        <EditText
            android:id="@+id/et_user_feedback_body"
            android:background="@drawable/setting_user_feedback_edittext"
            style="@style/userFeedbackPhoneTv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/userFeedbackBody"/>
        <TextView
            android:id="@+id/tv_user_feedback_send"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userFeedbackSend"/>
    </LinearLayout>
</LinearLayout>
