<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/custom_title_setting"
             android:id="@+id/include_title_setting"/>
    <com.lanou3g.mostbeautifulproperty.view.BounceScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:id="@+id/ll_setting_personal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                style="@style/personalDatall">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settingPersonalData"
                    style="@style/personalData"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    android:id="@+id/circleImageView"/>

                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@mipmap/ahlib_right_arrow"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                style="@style/personalDatall">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settingAlerts"
                    style="@style/personalData"/>
                <SeekBar
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                style="@style/personalDatall">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settingClearCache"
                    style="@style/personalData"/>
                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@mipmap/ahlib_right_arrow"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                style="@style/personalDatall">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settingUserFeedback"
                    style="@style/personalData"/>
                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@mipmap/ahlib_right_arrow"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                style="@style/personalDatall">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settingGivePraise"
                    style="@style/personalData"/>
                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@mipmap/ahlib_right_arrow"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                style="@style/personalDatall">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settingRecommendFriend"
                    style="@style/personalData"/>
                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@mipmap/ahlib_right_arrow"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                style="@style/personalDatall">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settingAboutUs"
                    style="@style/personalData"/>
                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@mipmap/ahlib_right_arrow"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                style="@style/personalDatall">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settingStartVideo"
                    style="@style/personalData"/>
                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@mipmap/ahlib_right_arrow"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                style="@style/personalDatall">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settingExitLogin"
                    style="@style/personalData"/>
                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@mipmap/ahlib_right_arrow"/>
            </LinearLayout>
        </LinearLayout>
    </com.lanou3g.mostbeautifulproperty.view.BounceScrollView>
</LinearLayout>