<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
    >
    <com.lanou3g.mostbeautifulproperty.view.BounceScrollView
        android:id="@+id/mine_bounce_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@mipmap/bg_mine">

                <TextView
                    android:id="@+id/tv_fragment_mine_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_mine_circleimg"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/textToImg"
                    android:text="登录"
                    android:textColor="@color/nameText"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/fragment_mine_circleimg"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/man_selected"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/fragment_mine_daily_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <ImageView
                    style="@style/mineImg"
                    android:src="@mipmap/icon_my_daily"
                    />
                <TextView
                    style="@style/mineTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/myDaily"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/mineLine"/>
            <LinearLayout
                android:id="@+id/fragment_mine_attention_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <ImageView
                    style="@style/mineImg"
                    android:src="@mipmap/ic_mine_attention_normal"/>
                <TextView
                    style="@style/mineTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/mineAtten"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/mineLine"/>
            <LinearLayout
                android:id="@+id/fragment_mine_wish_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <ImageView
                    style="@style/mineImg"
                    android:src="@mipmap/ic_mine_wish_list_normal"/>
                <TextView
                    style="@style/mineTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/mineWish"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/mineLine"/>
            <LinearLayout
                android:id="@+id/fragment_mine_message_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <ImageView
                    style="@style/mineImg"
                    android:src="@mipmap/ic_mine_message"/>
                <TextView
                    style="@style/mineTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/mineMessage"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/mineLine"/>
            <LinearLayout
                android:id="@+id/fragment_mine_feedback_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <ImageView
                    style="@style/mineImg"
                    android:src="@mipmap/ic_mine_feedback"/>
                <TextView
                    style="@style/mineTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/minwFeesback"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/mineLine"/>
            <LinearLayout
                android:id="@+id/fragment_mine_besbeaty_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <ImageView
                    style="@style/mineImg"
                    android:src="@mipmap/ic_mine_zuimei"/>
                <TextView
                    style="@style/mineTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/mineZui"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/mineLine"/>
            <Button
                android:id="@+id/btn_mine_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mineShareBtn"
                style="@style/mineShareBtn"/>
        </LinearLayout>
    </com.lanou3g.mostbeautifulproperty.view.BounceScrollView>


    <ImageView

        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="@dimen/iconDis"
        android:id="@+id/iv_mine_sm"
        android:background="@drawable/fragment_mine_qr"/>
    <ImageView
        style="@style/titleSetPicsize"
        android:id="@+id/iv_mine_setting"
        />
</RelativeLayout>