<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="#eff2f6"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"

        android:background="@color/discover_item_bg"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="登陆"
            android:textColor="#fff"
            android:textSize="18sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/kobe"
        >


    <android.support.v7.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/cardViewBack"
        android:id="@+id/cv_nameandpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="56dp">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
              android:textColorHint="#ffffff"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_username"
                    android:hint="@string/user_name"
                    android:textColor="@color/loginText"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:textColorHint="#ffffff"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/loginText"
                    android:id="@+id/login_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="90dp"
        android:orientation="horizontal" >




        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:background="#940e050b"
            android:gravity="center"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:id="@+id/button_riegister"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:background="#940e050b"
            android:gravity="center"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
    </LinearLayout>
  </LinearLayout>



